--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "@11ty/eleventy": "^1.0.0",
+    "@sanity/client": "^3.1.0",
+    "@sanity/image-url": "^1.0.1",
+    "dotenv": "^16.0.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.49.8"
   }
